# Orpheus-TTS

./: .gitignore  run_example_from_readme.py
finetune/: TROUBLESHOOTING.md  config.yaml  config_2.yaml  custom_dataset.py  explore_dataset.py  full_training.py  generate_examples_direct.py  generate_examples_for_listening.py  hg_data_prepare_config.yaml  lora.py  merge_checkpoint.py  qlora.py  qlora_sorting.py  quick_merge.py  sorting_dataset.py  test_checkpoint.py  tokenise_speech_dataset.py
finetune100/: config.yaml  custom_dataset.py  full_training.py  merge_checkpoint.py  tokenise_speech_dataset.py  training.py  utils.py
my_inference/: inference.py
orpheus_tts_pypi/orpheus_tts/: engine_class.py
orpheus_tts_vllm/: __init__.py  engine_class.py
orpheus_vllm/: README.md  example.ipynb  example.py  pyproject.toml  special_tokens.py
orpheus_vllm/orpheus_vllm/: __init__.py  engine_class.py
realtime_streaming_example/: .env  client.html  main.py
