[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orpheus-vllm"
version = "0.1.0"
description = "Orpheus TTS with vLLM backend for fast inference"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Orpheus TTS Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "vllm>=0.2.0",
    "transformers>=4.30.0",
    "snac>=0.1.0",
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/orpheus-tts"

[tool.setuptools]
packages = ["orpheus_vllm"]
